--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </li>
           </ul>
 
-          <ul class="contact list">
+          <ul class="contact list mob_contact">
             <li class="contact__item_mob">
               <a href="tel:+380961111111" class="contact__link_mob link">
                 +38 096 111 11 11
