--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,149 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
+    <header class="header">
+      <div class="container header__content">
+        <a href="./index.html" class="logo logo--header link">
+          <span class="logo__accent">Web</span>Studio
+        </a>
+
+        <nav class="navigation">
+          <!-- <button type="button" class="menu-button" data-menu-button>
+            <svg
+              width="40"
+              height="40"
+              aria-label="Перемикач мобільного меню"
+              aria-expanded="false"
+            >
+              <use
+                class="icon-close_menu"
+                href="./images/icons-not-min.svg#icon-close_menu"
+              ></use>
+              <use
+                class="icon-menu"
+                href="./images/icons-not-min.svg#icon-menu"
+              ></use>
+            </svg>
+          </button> -->
+          <ul class="navigation__list list">
+            <li class="navigation__item">
+              <a
+                href="./index.html"
+                class="navigation__link navigation__link--current link"
+                >Студія</a
+              >
+            </li>
+            <li class="navigation__item">
+              <a href="./portfolio.html" class="navigation__link link"
+                >Портфоліо</a
+              >
+            </li>
+            <li class="navigation__item">
+              <a href="" class="navigation__link link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+
+        <ul class="contact list contacts_in_header">
+          <li class="contact__item">
+            <a href="mailto:info@devstudio.com" class="contact__link link">
+              <svg class="contact__icon" width="16" height="12">
+                <use href="./images/icons-not-min.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
+          </li>
+          <li class="contact__item">
+            <a href="tel:+380961111111" class="contact__link link">
+              <svg class="contact__icon" width="10" height="16">
+                <use href="./images/icons-not-min.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
+          </li>
+        </ul>
+
+        <button
+          type="button"
+          class="menu-toggle js-open-menu open_mob_menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg
+            width="40"
+            height="40"
+            aria-label="Перемикач мобільного меню"
+            aria-expanded="false"
+          >
+            <use
+              class="icon-menu"
+              href="./images/icons-not-min.svg#icon-menu"
+            ></use>
+          </svg>
+        </button>
+        <div class="menu-container js-menu-container" id="mobile-menu">
+          <button
+            type="button"
+            class="menu-toggle js-close-menu mob-menu__btn close_mob_menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
+            <svg class="mob-menu__icon" width="40" height="40">
+              <use href="./images/icons-not-min.svg#icon-close_menu"></use>
+            </svg>
+          </button>
+
+          <ul class="navigation__list_mob list">
+            <li class="navigation__item_mob">
+              <a
+                href="./index.html"
+                class="navigation__link_mob navigation__link--current_mob link"
+                >Студія</a
+              >
+            </li>
+            <li class="navigation__item_mob">
+              <a href="./portfolio.html" class="navigation__link_mob link"
+                >Портфоліо</a
+              >
+            </li>
+            <li class="navigation__item_mob">
+              <a href="" class="navigation__link_mob link">Контакти</a>
+            </li>
+          </ul>
+
+          <ul class="contact list mob_contact">
+            <li class="contact__item_mob">
+              <a href="tel:+380961111111" class="contact__link_mob link">
+                +38 096 111 11 11
+              </a>
+            </li>
+            <li class="contact__item_mm">
+              <a
+                href="mailto:info@devstudio.com"
+                class="contact__link_mob link"
+              >
+                info@devstudio.com
+              </a>
+            </li>
+          </ul>
+
+          <ul class="mob-menu__social list">
+            <li class="mob-menu__social-item">
+              <a class="mob-menu__social-link link" href="#">Instagram</a>
+            </li>
+            <li class="mob-menu__social-item">
+              <a class="mob-menu__social-link link" href="#">Twitter</a>
+            </li>
+            <li class="mob-menu__social-item">
+              <a class="mob-menu__social-link link" href="#">Facebook</a>
+            </li>
+            <li class="mob-menu__social-item">
+              <a class="mob-menu__social-link link" href="#">LinkedIn</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
     <!-- <header class="header">
       <div class="container header__content">
         <a href="./index.html" class="logo logo--header link">
@@ -259,7 +402,7 @@
       </section>
     </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-container">
         <div class="footer__info-block info-block">
           <a href="./index.html" class="logo logo--footer logo--inverse link"
@@ -347,6 +490,6 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
