--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             height="40"
             aria-label="Перемикач мобільного меню"
             aria-expanded="false"
+            class="mob-menu__icon"
           >
             <use
               class="icon-menu"
